examples/invalid/empty_sample.ms
MainPrgm empty;
Var


BeginPg
{
}
EndPg;